style.css
body {
  font-family: 'Roboto', sans-serif;
  background-color: rgb(245, 245, 245);
}

h1 {
  font-family: 'Amatic SC', cursive;
}

.container {
  display: flex;
  flex-direction: row;
}

img {
  width: 100%;
  height: 100vh;
  flex: 2;
}

.main-content {
  flex: 4;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header-para,
.footer-para {
  width: 80%;

  margin-top: 110px;
  margin-bottom: 40px;
}

.footer-para {
  margin-top: 40px;
}
input {
  padding: 6px 3px;
  border: 1px solid #e5e7eb;
  border-radius: 5px;
}

input:focus {
  border: 1px solid rgb(13, 37, 172);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.main-content p {
  font-size: 18px;
}

form {
  width: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: rgba(50, 50, 93, 0.02) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.05) 0px 1px 3px -1px;
}

form > * {
  width: 80%;
}

h2 {
  font-size: 18px;
  margin: 20px 0;
}

.horizontal-inputs {
  display: flex;
  gap: 70px;
}

.input {
  display: flex;
  flex-direction: column;
  margin: 10px 0;
}

label {
  margin-bottom: 3px;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: rgb(77, 77, 77);
}

.btn-div {
  margin: 20px 0;
}

button {
  width: 160px;
  padding: 10px 4px;
  background-color: rgb(58, 71, 101);
  color: white;
  border: none;
  border-radius: 5px;
}

